# ==============================================================================
# 公共头文件
# ==============================================================================
SET(THIRD_PARTY_ROOT_PATH ${CMAKE_HOME_DIRECTORY}/ThirdParty/)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(Common)

add_executable(BinarySearch BinarySearch/BinarySearch.cpp)
add_executable(BreadthFirstDirectedPaths BreadthFirstDirectedPaths/main.cpp)
add_executable(BreadthFirstPaths BreadthFirstPaths/main.cpp)
add_executable(CC CC/main.cpp)
add_executable(Cycle Cycle/main.cpp)
add_executable(DepthFirstDirectedPaths DepthFirstDirectedPaths/main.cpp)
add_executable(DepthFirstOrder DepthFirstOrder/main.cpp)
add_executable(DepthFirstPaths DepthFirstPaths/main.cpp)
add_executable(DepthFirstSearch DepthFirstSearch/main.cpp)
add_executable(Digraph Digraph/main.cpp)
add_executable(DirectedCycle DirectedCycle/main.cpp)
add_executable(DirectedDFS DirectedDFS/main.cpp)
add_executable(EdgeWeightedDigraph EdgeWeightedDigraph/main.cpp)
add_executable(EdgeWeightedGraph EdgeWeightedGraph/main.cpp)
add_executable(Graphs Graphs/main.cpp)
add_executable(IndexMinPQ IndexMinPQ/main.cpp)
add_executable(Insertion Insertion/Insertion.cpp)
add_executable(KosarajuSCC KosarajuSCC/main.cpp)
add_executable(KruskalMST KruskalMST/main.cpp)
add_executable(LazyPrimMST LazyPrimMST/main.cpp)
add_executable(Merge Merge/Merge.cpp)
add_executable(MinPQ MinPQ/main.cpp)
add_executable(PrimMST PrimMST/main.cpp)
add_executable(Quick Quick/Quick.cpp)
add_executable(Selection Selection/Selection.cpp)
add_executable(Shell Shell/Shell.cpp)
add_executable(SymbolDigraph SymbolDigraph/main.cpp)
add_executable(SymbolGraph SymbolGraph/main.cpp)
add_executable(Topological Topological/main.cpp)
add_executable(TransitiveClosure TransitiveClosure/main.cpp)
add_executable(UF UF/main.cpp)
